# Network-Analysis-Made-Simple

./: .buildpacks  .bumpversion.cfg  .gitattributes  .gitignore  .pre-commit-config.yaml  .pyup.yml  .travis.yml  0-pre-tutorial-exercises.ipynb  0. Pre-Tutorial Exercises.ipynb  1-introduction.ipynb  1. Preface.ipynb  2-networkx-basics-instructor.html  2-networkx-basics-instructor.ipynb  2-networkx-basics-student.ipynb  2. Network Basics.ipynb  2. Network(X) Basics (Instructor).ipynb  2. Network(X) Basics (Student).ipynb  2. Network(X) Basics.ipynb  3-hubs-and-paths-instructor.html  3-hubs-and-paths-instructor.ipynb  3-hubs-and-paths-student.ipynb  3. Hubs and Paths (Instructor).ipynb  3. Hubs and Paths (Student).ipynb  3. Hubs and Paths.ipynb  3. Intermediate Topics on Networks.ipynb  4-cliques-triangles-structures-instructor.html  4-cliques-triangles-structures-instructor.ipynb  4-cliques-triangles-structures-student.ipynb  4. Cliques, Triangles and Graph Structures (Instructor).ipynb  4. Cliques, Triangles and Graph Structures (Student).ipynb  4. Cliques, Triangles and Squares (Instructor).ipynb  4. Cliques, Triangles and Squares (Student).ipynb  4. Cliques, Triangles and Squares.ipynb  4. Triangles and Squares.ipynb  404.html  5-graph-input-output-instructor.ipynb  5-graph-input-output-student.ipynb  5. Generating Randomness.ipynb  5. Loading and Saving Network Data as Tables.ipynb  5. Loading and Visualizing Network Data (Instructor).ipynb  (+62 more)
.devcontainer/: Dockerfile  devcontainer.Dockerfile  devcontainer.json
.github/: FUNDING.yml  stale.yml
.github/workflows/: check.yaml  deploy.yaml  lint.yaml  publish-package.yaml
.ipynb_checkpoints/: 1. Preface-checkpoint.ipynb  2. Network(X) Basics (Instructor)-checkpoint.ipynb  2. Network(X) Basics (Student)-checkpoint.ipynb  2. Network(X) Basics-checkpoint.ipynb  3. Hubs and Paths (Instructor)-checkpoint.ipynb  3. Hubs and Paths (Student)-checkpoint.ipynb  3. Hubs and Paths-checkpoint.ipynb  3. Intermediate Topics on Networks-checkpoint.ipynb  4. Cliques, Triangles and Squares (Instructor)-checkpoint.ipynb  4. Cliques, Triangles and Squares (Student)-checkpoint.ipynb  4. Cliques, Triangles and Squares-checkpoint.ipynb  4. Triangles and Squares-checkpoint.ipynb  5. Loading and Saving Network Data as Tables-checkpoint.ipynb  6. Loading and Saving Data-checkpoint.ipynb  6. Network Statistical Inference (Instructor)-checkpoint.ipynb  6. Network Statistical Inference (Student)-checkpoint.ipynb  6. Random Networks and Statistics (Instructor)-checkpoint.ipynb  6. Random Networks and Statistics (Student)-checkpoint.ipynb  6. Random Networks and Statistics-Copy0-checkpoint.ipynb  6. Random Networks and Statistics-checkpoint.ipynb  7. Bipartite Graphs (Instructor)-checkpoint.ipynb  7. Bipartite Graphs (Student)-checkpoint.ipynb  7. Divvy Deeper Dive-checkpoint.ipynb
00-preface/: 01-setup.py  02-prereqs.py  03-goals.py
00-preface/01-setup/: index.html
00-preface/02-prereqs/: index.html
00-preface/03-goals/: index.html
00-preface/preface/: index.html
01-introduction/: 01-graphs.py  02-networkx-intro.py  03-viz.py
01-introduction/01-graphs/: index.html
02-algorithms/: 01-hubs.py  02-paths.py  03-structures.py
03-practical/: 01-io.py  02-testing.py
04-advanced/: 01-bipartite.py  02-linalg.py  03-stats.py
05-casestudies/: 02-airport.py
archive/: 0-pre-tutorial-exercises.ipynb  2-networkx-basics-instructor.ipynb  2-networkx-basics-student.ipynb  3-hubs-and-paths-student.ipynb  4-cliques-triangles-structures-instructor.ipynb  4-cliques-triangles-structures-student.ipynb  5-graph-input-output-instructor.ipynb  6-bipartite-graphs-instructor.ipynb  6-bipartite-graphs-student.ipynb  7-game-of-thrones-case-study-student.ipynb  8-US-airports-case-study-instructor.ipynb  bonus-1-network-statistical-inference-instructor.ipynb  bonus-1-network-statistical-inference-student.ipynb  bonus-2-one-more-thing.ipynb  bonus-3-matrices-instructor.ipynb  bonus-3-matrices-student.ipynb
css/: nb_mods.css
custom/: __init__.py  custom_funcs.py  load_data.py
data/: divvy_2013.zip.REMOVED.git-id  passengers.csv.REMOVED.git-id
datasets/: GlobalAirportDatabase.txt  divvy_2013.zip.REMOVED.git-id  passengers.csv.REMOVED.git-id
docs/: 0-pre-tutorial-exercises.html  1-introduction.html  2-networkx-basics-instructor.html  2-networkx-basics-student.html  3-hubs-and-paths-instructor.html  3-hubs-and-paths-student.html  4-cliques-triangles-structures-instructor.html  4-cliques-triangles-structures-student.html  5-graph-input-output-instructor.html  5-graph-input-output-student.html  6-bipartite-graphs-instructor.html  6-network-statistical-inference-instructor.html  6-network-statistical-inference-student.html  7-bipartite-graphs-instructor.html  7-bipartite-graphs-student.html  7-game-of-thrones-case-study-instructor.html  8-US-aiports-case-study-instructor.html  8-US-airports-case-study-instructor.html  8-one-more-thing.html  bonus-1-network-statistical-inference-instructor.html  bonus-2-one-more-thing.html  bonus-3-matrices-instructor.html  gh.css  index.html  index.md  learn-more.md
learn-more/: index.html
manuscript/: Book.txt  chapter1.txt  chapter2.txt  chapter3.txt
nams/: __init__.py  builder_lib.py  functions.py  load_data.py
notebooks/: 2-networkx-basics-instructor.ipynb  3-hubs-and-paths-instructor.ipynb  4-cliques-triangles-structures-instructor.ipynb  5-graph-input-output-instructor.ipynb  6-bipartite-graphs-instructor.ipynb  6-bipartite-graphs-student.ipynb  8-US-airports-case-study-student.ipynb  bonus-3-matrices-instructor.ipynb  index.md  learn-more.md
scripts/: Dockerfile  export_ipynb.sh
search/: search_index.json
solutions/: 02-add_edges.py  02-len-graph.py  02-max_num_times_fav.py  02-num-boys-girls.py  02-num_edges.py  03-bc_vs_dc_scatter.py  03-dc_nbrs_scatter.py  03-degree_centrality_ecdf.py  03-extract_neighbors.py  03-extract_path_edges.py  03-num_neighbors_ecdf.py  03-pass_message.py  03-pass_message_distribution.py  03-shortest_path.py  03-sorted_neighbors.py
tutorial-proposals/: pycon2018.md
(+211 files in other folders)
