# https://setuptools.pypa.io/en/latest/userguide/quickstart.html
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
fail-under = 100
exclude = ["setup.py", "docs", "build", "examples"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 2
quiet = false
whitelist-regex = []
color = true

[tool.pytest.ini_options]
addopts = "-v --cov --cov-report term-missing"
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"

[tool.ruff]
# See https://docs.astral.sh/ruff/rules/ for a list of rules.
# See https://docs.astral.sh/ruff/configuration/#using-pyprojecttoml for configuration documentation
select = ["E", "F", "I"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[project]
name = "nams"
version = "0.0.3"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "marimo>=0.14",
    "nxviz>=0.9.0",
    "networkx>=3.4",
    "numpy>=2.0",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "plotly>=5.0",
    "pyprojroot>=0.3",
    "tqdm>=4.60",
    "markdown>=3.0",
    "pyjanitor>=0.30",
    "python-louvain>=0.16",
    "scipy>=1.14",
    "seaborn>=0.13",
    "ipython>=8.0",
]

[tool.coverage.run]
omit = [
    "tests/*",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
nams = { path = ".", editable = true }

[tool.pixi.dependencies]
python = "3.12.*"
ffmpeg = ">=7.1.0,<8"

[tool.pixi.feature.tests.dependencies]
pytest = "*"
pytest-cov = "*"
hypothesis = "*"

[tool.pixi.feature.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
mkdocs-material-extensions = "*"
pymdown-extensions = "*"
mknotebooks = "*"

[tool.pixi.feature.devtools.dependencies]
pre-commit = "*"

[tool.pixi.tasks]
notebook = "marimo edit --no-token notebooks/"

[tool.pixi.feature.tests.tasks]
test = "pytest"

[tool.pixi.feature.devtools.tasks]
lint = "pre-commit run --all-files"
commit = "git commit"

[tool.pixi.feature.docs.tasks]
build-docs = "mkdocs build"
serve-docs = "mkdocs serve"

[tool.pixi.feature.setup.tasks]
setup = "pre-commit autoupdate && pre-commit install --install-hooks"
update = "pre-commit autoupdate"

[tool.pixi.environments]
default = { features = ["tests", "devtools", "setup"] }
docs = { features = ["docs"] }
tests = { features = ["tests", "setup"] }
